--- a/app/src/main/res/layout/activity_user_page_fragment.xml
+++ b/app/src/main/res/layout/activity_user_page_fragment.xml
@@ -18,7 +18,7 @@
         <ImageView
             android:id="@+id/imgAvatar"
             android:layout_width="90dp"
-            android:layout_height="86dp"
+            android:layout_height="90dp"
             android:layout_centerHorizontal="true"
             android:contentDescription="AvatarPicture"
             android:scaleType="centerCrop"
@@ -54,6 +54,64 @@
 
     </RelativeLayout>
 
+    <RelativeLayout
+        android:id="@+id/rlSetting"
+        android:layout_width="match_parent"
+        android:layout_height="460dp"
+        android:layout_marginTop="16dp"
+        android:background="#94A2EF"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/rlProfile">
 
+        <EditText
+            android:id="@+id/etGoal"
+            android:layout_width="240dp"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="20dp"
+            android:layout_marginTop="70dp"
+            android:hint="Amount"
+            android:inputType="text"
+            tools:text="Estimated Amount" />
+
+        <Button
+            android:id="@+id/btnUpdateGoal"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentEnd="false"
+            android:layout_marginStart="10dp"
+            android:layout_marginTop="70dp"
+            android:layout_marginEnd="3dp"
+            android:layout_toEndOf="@+id/etGoal"
+            android:text="Update" />
+
+        <TextView
+            android:id="@+id/tvEstimatedAmount"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="20dp"
+            android:layout_marginTop="35dp"
+            android:text="Estimated Amount / Month:"
+            android:textSize="18sp" />
+
+        <Button
+            android:id="@+id/btnFeedBack"
+            android:layout_width="280dp"
+            android:layout_height="60dp"
+            android:layout_centerHorizontal="true"
+            android:layout_marginTop="180dp"
+            android:text="Feedback" />
+
+        <Button
+            android:id="@+id/btnProfileSetting"
+            android:layout_width="280dp"
+            android:layout_height="60dp"
+            android:layout_centerHorizontal="true"
+            android:layout_marginTop="250dp"
+            android:text="Setting" />
+
+
+    </RelativeLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
