--- a/app/src/main/res/layout/activity_feedback.xml
+++ b/app/src/main/res/layout/activity_feedback.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ActivityFeedback"
+    tools:context=".FeedbackActivity"
     tools:ignore="ExtraText">
 
     <TextView
@@ -36,7 +36,7 @@
         tools:ignore="MissingConstraints" />
 
     <Button
-        android:id="@+id/btnSubmit"
+        android:id="@+id/btnSubmitFB"
         android:layout_width="280dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="30dp"
