--- a/app/src/main/res/layout/activity_user_page_fragment.xml
+++ b/app/src/main/res/layout/activity_user_page_fragment.xml
@@ -30,9 +30,10 @@
         <TextView
             android:id="@+id/tvUsername"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_height="60dp"
             android:layout_below="@id/imgAvatar"
             android:layout_centerHorizontal="true"
+            android:textAlignment="center"
             android:textSize="36sp"
             android:textStyle="bold"
             app:layout_constraintEnd_toEndOf="@+id/imgAvatar"
@@ -45,7 +46,7 @@
             android:layout_height="wrap_content"
             android:layout_below="@+id/tvUsername"
             android:layout_centerHorizontal="true"
-            android:layout_marginTop="18dp"
+            android:layout_marginTop="0dp"
             android:text="Edit"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.416"
