--- a/app/src/main/res/layout/activity_modify_password.xml
+++ b/app/src/main/res/layout/activity_modify_password.xml
@@ -7,22 +7,45 @@
     android:layout_height="match_parent"
     tools:context=".ModifyPasswordActivity">
 
+  <ToggleButton
+      android:id="@+id/tbNewPassword"
+      android:layout_width="50dp"
+      android:layout_height="55dp"
+      android:text="*"
+      android:textOff="Show"
+      app:layout_constraintBottom_toBottomOf="@+id/etNewPassword"
+      app:layout_constraintStart_toEndOf="@+id/etNewPassword"
+      app:layout_constraintTop_toTopOf="@+id/etNewPassword"
+      app:layout_constraintVertical_bias="0.0" />
+
+  <ToggleButton
+      android:id="@+id/tbConfirmNewPassword"
+      android:layout_width="50dp"
+      android:layout_height="55dp"
+      android:text="*"
+      android:textOff="Show"
+      app:layout_constraintBottom_toBottomOf="@+id/etConfirmNewPassword"
+      app:layout_constraintStart_toEndOf="@+id/etConfirmNewPassword"
+      app:layout_constraintTop_toTopOf="@+id/etConfirmNewPassword"
+      app:layout_constraintVertical_bias="0.0" />
+
   <EditText
       android:id="@+id/etOldPassword"
       android:layout_width="wrap_content"
-      android:layout_height="wrap_content"
+      android:layout_height="55dp"
       android:layout_marginTop="50dp"
       android:ems="10"
       android:hint="Enter Old Password"
       android:inputType="textPassword"
       app:layout_constraintEnd_toEndOf="@+id/tv"
+      app:layout_constraintHorizontal_bias="0.0"
       app:layout_constraintStart_toStartOf="@+id/tv"
       app:layout_constraintTop_toBottomOf="@+id/tv" />
 
   <EditText
       android:id="@+id/etNewPassword"
       android:layout_width="wrap_content"
-      android:layout_height="wrap_content"
+      android:layout_height="55dp"
       android:layout_marginTop="20dp"
       android:ems="10"
       android:hint="Enter New Password"
@@ -45,7 +68,7 @@
   <EditText
       android:id="@+id/etConfirmNewPassword"
       android:layout_width="wrap_content"
-      android:layout_height="wrap_content"
+      android:layout_height="55dp"
       android:layout_marginTop="20dp"
       android:ems="10"
       android:hint="Confirm New Password"
@@ -63,5 +86,15 @@
       app:layout_constraintEnd_toEndOf="@+id/etConfirmNewPassword"
       app:layout_constraintStart_toStartOf="@+id/etConfirmNewPassword"
       app:layout_constraintTop_toBottomOf="@+id/etConfirmNewPassword" />
+
+  <ToggleButton
+      android:id="@+id/tbOldPassword"
+      android:layout_width="50dp"
+      android:layout_height="55dp"
+      android:text="*"
+      android:textOff="Show"
+      app:layout_constraintBottom_toBottomOf="@+id/etOldPassword"
+      app:layout_constraintStart_toEndOf="@+id/etOldPassword"
+      app:layout_constraintTop_toTopOf="@+id/etOldPassword" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
