--- a/app/src/main/res/layout/activity_user_page_fragment.xml
+++ b/app/src/main/res/layout/activity_user_page_fragment.xml
@@ -74,7 +74,7 @@
             android:layout_marginTop="70dp"
             android:hint="Amount"
             android:inputType="text"
-            tools:text="Estimated Amount" />
+            android:text="Estimated Amount"/>
 
         <Button
             android:id="@+id/btnUpdateGoal"
