--- a/app/src/main/res/layout/activity_edit_profile.xml
+++ b/app/src/main/res/layout/activity_edit_profile.xml
@@ -13,12 +13,14 @@
         android:layout_below="@id/etUsername"
         android:layout_centerHorizontal="true"
         android:layout_marginBottom="160dp"
+        android:backgroundTint="#3CB371"
         android:onClick="confirmChanges"
         android:text="Submit"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="@+id/etPhone"
         app:layout_constraintStart_toStartOf="@+id/etPhone"
-        app:layout_constraintTop_toBottomOf="@+id/etPhone" />
+        app:layout_constraintTop_toBottomOf="@+id/etPhone"
+        app:cornerRadius="10dp"/>
 
     <ImageView
         android:id="@+id/imgAvatar"
