--- a/app/src/main/res/layout/activity_forget_password.xml
+++ b/app/src/main/res/layout/activity_forget_password.xml
@@ -23,23 +23,28 @@
         android:paddingVertical="56dp"
         android:text="Recover your password"
         android:textSize="32sp"
-        android:textStyle="bold" />
+        android:textStyle="bold"
+        android:textColor="#006400"/>
 
     <TextView
         android:id="@+id/forget_password_text"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginHorizontal="16dp"
         android:gravity="center"
         android:padding="20dp"
         android:text="Enter the email that you used when you signed up to recover your password. You will receive a password reset link."
-        android:textSize="16sp"/>
+        android:textSize="16sp"
+        android:textColor="#006400"/>
 
     <EditText
         android:id="@+id/email_recover"
         android:layout_width="match_parent"
         android:layout_height="50dp"
         android:layout_marginVertical="32dp"
-        android:background="#DAD8D8"
+        android:layout_marginHorizontal="40dp"
+        android:background="#DCDCDC"
+        android:maxLines="1"
         android:hint="Enter your email here"
         android:textSize="16sp"/>
 
@@ -48,9 +53,12 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="50dp"
+        android:layout_marginHorizontal="40dp"
+        android:backgroundTint="#3CB371"
         android:gravity="center"
         android:text="Confirm"
-        android:textSize="20sp"/>
+        android:textSize="20sp"
+        app:cornerRadius="10dp" />
 
 
 
