--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -8,14 +8,21 @@
     android:padding="10dp"
     tools:context=".LoginActivity">
 
+    <ImageView
+        android:layout_width="72dp"
+        android:layout_height="72dp"
+        android:layout_marginTop="40dp"
+        android:layout_gravity="center"
+        android:src="@drawable/icon" />
+
     <TextView
         android:id="@+id/login_title"
         android:layout_width="match_parent"
         android:layout_height="60dp"
         android:textSize="40sp"
-        android:layout_marginTop="100dp"
         android:text="NMTracker"
         android:gravity="center"
+        android:textColor="#3CB371"
         />
 
     <EditText
@@ -23,19 +30,20 @@
         android:layout_width="match_parent"
         android:layout_height="50dp"
         android:layout_marginTop="50dp"
-        android:background="#DAD8D8"
+        android:layout_marginHorizontal="40dp"
+        android:background="#DCDCDC"
         android:hint="Email"
         android:padding="10dp"
         android:textSize="20sp"
-        android:maxLines="1"
-        />
+        android:maxLines="1" />
 
     <EditText
         android:id="@+id/password_login"
         android:layout_width="match_parent"
         android:layout_height="50dp"
         android:layout_marginTop="10dp"
-        android:background="#DAD8D8"
+        android:layout_marginHorizontal="40dp"
+        android:background="#DCDCDC"
         android:hint="Password"
         android:inputType="textPassword"
         android:padding="10dp"
@@ -46,9 +54,12 @@
     <Button
         android:id="@+id/login_button"
         android:layout_width="match_parent"
-        android:layout_height="50dp"
+        android:layout_height="wrap_content"
         android:layout_marginTop="50dp"
+        android:layout_marginHorizontal="40dp"
+        android:layout_gravity="center"
         android:text="Login"
+        android:backgroundTint="#3CB371"
         android:textSize="20sp"
         app:cornerRadius="10dp" />
 
@@ -60,7 +71,7 @@
         android:text="Register here"
         android:textSize="16sp"
         android:gravity="center"
-        android:textColor="#3A5FCD"
+        android:textColor="#006400"
         />
 
     <TextView
@@ -71,7 +82,7 @@
         android:text="Forget password? Click here"
         android:textSize="16sp"
         android:gravity="center"
-        android:textColor="#3A5FCD"
+        android:textColor="#006400"
         />
 
 </LinearLayout>
