--- a/app/src/main/res/layout/activity_modify_password.xml
+++ b/app/src/main/res/layout/activity_modify_password.xml
@@ -60,7 +60,8 @@
       android:layout_height="wrap_content"
       android:layout_marginTop="120dp"
       android:text="Modify Password"
-      android:textSize="28sp"
+      android:textColor="#006400"
+      android:textSize="32sp"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toTopOf="parent" />
@@ -79,10 +80,13 @@
 
   <Button
       android:id="@+id/btnUpdatePassword"
-      android:layout_width="wrap_content"
+      android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:layout_marginTop="40dp"
+      android:layout_marginHorizontal="72dp"
+      android:backgroundTint="#3CB371"
       android:text="Submit"
+      app:cornerRadius="10dp"
       app:layout_constraintEnd_toEndOf="@+id/etConfirmNewPassword"
       app:layout_constraintStart_toStartOf="@+id/etConfirmNewPassword"
       app:layout_constraintTop_toBottomOf="@+id/etConfirmNewPassword" />
