--- a/app/src/main/res/layout/activity_setting.xml
+++ b/app/src/main/res/layout/activity_setting.xml
@@ -1,44 +1,44 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     tools:context=".ActivitySetting">
 
     <TextView
         android:id="@+id/textView2"
-        android:layout_width="fill_parent"
-        android:layout_height="64dp"
-        android:background="#8E6DFF"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="#3CB371"
+        android:padding="10dp"
         android:text="Setting"
         android:textAlignment="center"
         android:textSize="42sp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.0" />
+        android:textColor="#FFFFFF"/>
 
     <Button
         android:id="@+id/btnEditPassword"
         android:layout_width="280dp"
-        android:layout_height="64dp"
+        android:layout_height="wrap_content"
         android:layout_marginTop="120dp"
+        android:layout_gravity="center"
+        android:padding="10dp"
+        android:backgroundTint="#3CB371"
         android:text="Modify Password"
         android:textSize="20sp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="@+id/textView2"
-        app:layout_constraintTop_toBottomOf="@+id/textView2" />
+        app:cornerRadius="10dp"/>
 
     <Button
         android:id="@+id/btnLogout"
         android:layout_width="280dp"
-        android:layout_height="64dp"
+        android:layout_height="wrap_content"
         android:layout_marginTop="30dp"
+        android:layout_gravity="center"
+        android:padding="10dp"
+        android:backgroundTint="#3CB371"
         android:text="Log Out"
         android:textSize="20sp"
-        app:layout_constraintEnd_toEndOf="@+id/btnEditPassword"
-        app:layout_constraintStart_toStartOf="@+id/btnEditPassword"
-        app:layout_constraintTop_toBottomOf="@+id/btnEditPassword" />
-</androidx.constraintlayout.widget.ConstraintLayout>
+        app:cornerRadius="10dp"/>
+</LinearLayout>
