--- a/app/src/main/res/layout/activity_user_page_fragment.xml
+++ b/app/src/main/res/layout/activity_user_page_fragment.xml
@@ -1,116 +1,126 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:padding="16dp" >
+    android:orientation="vertical"
+    android:padding="10dp" >
 
-    <RelativeLayout
+    <LinearLayout
         android:id="@+id/rlProfile"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="#FF9797"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
+        android:background="@drawable/frame_layout"
+        android:padding="20dp"
+        android:orientation="vertical" >
 
         <ImageView
             android:id="@+id/imgAvatar"
-            android:layout_width="90dp"
-            android:layout_height="90dp"
+            android:layout_width="84dp"
+            android:layout_height="84dp"
             android:layout_centerHorizontal="true"
             android:contentDescription="AvatarPicture"
+            android:layout_gravity="center"
             android:scaleType="centerCrop"
-            android:src="@drawable/defaultavatar"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            android:src="@drawable/defaultavatar" />
 
         <TextView
             android:id="@+id/tvUsername"
             android:layout_width="wrap_content"
-            android:layout_height="60dp"
-            android:layout_below="@id/imgAvatar"
-            android:layout_centerHorizontal="true"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="5dp"
+            android:layout_gravity="center"
             android:textAlignment="center"
             android:textSize="36sp"
             android:textStyle="bold"
-            app:layout_constraintEnd_toEndOf="@+id/imgAvatar"
-            app:layout_constraintStart_toStartOf="@+id/imgAvatar"
-            app:layout_constraintTop_toBottomOf="@+id/imgAvatar" />
+            android:textColor="#3CB371"/>
 
         <Button
             android:id="@+id/btnEditProfile"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_below="@+id/tvUsername"
-            android:layout_centerHorizontal="true"
-            android:layout_marginTop="0dp"
+            android:layout_marginHorizontal="60dp"
+            android:backgroundTint="#3CB371"
+            android:layout_marginTop="10dp"
             android:text="Edit"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.416"
-            app:layout_constraintStart_toEndOf="@+id/tvUsername"
-            tools:layout_editor_absoluteY="78dp" />
+            android:textSize="20dp"
+            app:cornerRadius="10dp"/>
 
-    </RelativeLayout>
+    </LinearLayout>
 
-    <RelativeLayout
+    <LinearLayout
         android:id="@+id/rlSetting"
         android:layout_width="match_parent"
-        android:layout_height="460dp"
-        android:layout_marginTop="16dp"
-        android:background="#94A2EF"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/rlProfile">
-
-        <EditText
-            android:id="@+id/etGoal"
-            android:layout_width="240dp"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="20dp"
-            android:layout_marginTop="70dp"
-            android:inputType="text" />
-
-        <Button
-            android:id="@+id/btnUpdateGoal"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentEnd="false"
-            android:layout_marginStart="10dp"
-            android:layout_marginTop="70dp"
-            android:layout_marginEnd="3dp"
-            android:layout_toEndOf="@+id/etGoal"
-            android:text="Update" />
+        android:layout_height="match_parent"
+        android:orientation="vertical"
+        android:background="@drawable/frame_layout"
+        android:padding="20dp"
+        android:layout_marginTop="5dp" >
 
         <TextView
             android:id="@+id/tvEstimatedAmount"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginLeft="20dp"
-            android:layout_marginTop="35dp"
+            android:layout_marginTop="20dp"
             android:text="Estimated Amount / Month:"
             android:textSize="18sp" />
 
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+
+            <EditText
+                android:id="@+id/etGoal"
+                android:layout_width="208dp"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="20dp"
+                android:layout_marginTop="10dp"
+                android:padding="8dp"
+                android:hint="Amount"
+                android:background="#DCDCDC"
+                android:inputType="text"
+                android:text="Estimated Amount"/>
+
+            <Button
+                android:id="@+id/btnUpdateGoal"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentEnd="false"
+                android:layout_marginStart="10dp"
+                android:layout_marginTop="10dp"
+                android:backgroundTint="#3CB371"
+                android:text="Update"
+                app:cornerRadius="10dp" />
+
+        </LinearLayout>
+
+
         <Button
             android:id="@+id/btnFeedBack"
-            android:layout_width="280dp"
-            android:layout_height="60dp"
-            android:layout_centerHorizontal="true"
-            android:layout_marginTop="180dp"
-            android:text="Feedback" />
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginHorizontal="20dp"
+            android:backgroundTint="#3CB371"
+            android:layout_marginTop="24dp"
+            android:text="Feedback"
+            android:textSize="24dp"
+            app:cornerRadius="10dp"/>
 
         <Button
             android:id="@+id/btnProfileSetting"
-            android:layout_width="280dp"
-            android:layout_height="60dp"
-            android:layout_centerHorizontal="true"
-            android:layout_marginTop="250dp"
-            android:text="Setting" />
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginHorizontal="20dp"
+            android:backgroundTint="#3CB371"
+            android:layout_marginTop="24dp"
+            android:text="Setting"
+            android:textSize="24dp"
+            app:cornerRadius="10dp"/>
 
 
-    </RelativeLayout>
+    </LinearLayout>
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+</LinearLayout>
