--- a/app/src/main/res/layout/activity_yearly_report.xml
+++ b/app/src/main/res/layout/activity_yearly_report.xml
@@ -1,18 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:padding="10dp">
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:text="This is your yearly report!"
-        android:layout_marginVertical="10dp"
-        android:textSize="32sp" />
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -23,6 +16,7 @@
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginHorizontal="20dp"
             android:text="This year, you have spent "
             android:textSize="16sp" />
 
@@ -32,22 +26,25 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:text="1000000000"
-            android:textSize="24sp" />
+            android:textSize="24sp"
+            android:textColor="#3CB371"/>
 
     </LinearLayout>
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
+        android:layout_marginTop="20dp"
         android:orientation="vertical">
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="right"
+            android:layout_marginHorizontal="20dp"
             android:text="This year, you have earned "
-            android:textSize="16sp" />
+            android:textSize="16sp"
+            />
 
         <TextView
             android:id="@+id/yearly_income"
@@ -55,25 +52,27 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:text="1000000000"
-            android:textSize="24sp" />
+            android:textSize="24sp"
+            android:textColor="#3CB371"/>
 
     </LinearLayout>
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
+        android:layout_marginTop="20dp"
         android:orientation="vertical">
 
         <com.github.mikephil.charting.charts.PieChart
             android:id="@+id/pie_chart_yearly"
             android:layout_width="match_parent"
-            android:layout_height="144dp" />
+            android:layout_height="200dp" />
 
         <TextView
             android:id="@+id/yearly_most_spend"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginHorizontal="20dp"
             android:text="You spend the most money on entertainment."
             android:textSize="16sp" />
 
@@ -82,19 +81,20 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
+        android:layout_marginTop="20dp"
         android:orientation="vertical">
 
         <com.github.mikephil.charting.charts.BarChart
             android:id="@+id/bar_chart_yearly"
             android:layout_width="match_parent"
-            android:layout_height="144dp" />
+            android:layout_height="200dp" />
 
         <TextView
             android:id="@+id/yearly_most_expense_month"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="right"
+            android:layout_marginHorizontal="20dp"
             android:text="You spent the most money in January"
             android:textSize="16sp" />
 
@@ -103,6 +103,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="right"
+            android:layout_marginHorizontal="20dp"
             android:text="But you got a lot of money in March"
             android:textSize="16sp" />
 
@@ -112,8 +113,11 @@
         android:id="@+id/yearly_back_to_main"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="40dp"
+        android:layout_marginTop="10dp"
+        android:layout_marginHorizontal="40dp"
+        android:backgroundTint="#3CB371"
         android:text="Back to Reality"
-        android:textSize="20sp"/>
+        android:textSize="20sp"
+        app:cornerRadius="10dp"/>
 
 </LinearLayout>
