--- a/app/src/main/res/layout/item_bill_filter.xml
+++ b/app/src/main/res/layout/item_bill_filter.xml
@@ -32,7 +32,7 @@
             android:layout_marginLeft="40dp"
             android:text="Expenses"
             android:textSize="32sp"
-            android:textColor="@color/white"
+            android:textColor="@color/black"
             />
 
     </LinearLayout>
