--- a/app/src/main/res/layout/activity_main_page_fragment.xml
+++ b/app/src/main/res/layout/activity_main_page_fragment.xml
@@ -1,77 +1,86 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
+<LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
-    tools:context=".fragment.MainPageFragment"
-    android:background="#3CB371"> <!-- Set the background color to white -->
+    tools:context=".fragment.MainPageFragment">
 
     <LinearLayout
         android:id="@+id/top_info_layout"
         android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="1"
-        android:orientation="vertical"
-        app:layout_constraintTop_toTopOf="parent">
+        android:layout_height="wrap_content"
+        android:background="@drawable/frame_layout"
+        android:orientation="vertical">
+
+        <ImageView
+            android:layout_width="60dp"
+            android:layout_height="60dp"
+            android:layout_gravity="center"
+            android:layout_marginVertical="20dp"
+            android:src="@drawable/icon"/>
+
+        <TextView
+            android:id="@+id/tvWeekly"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:text="Welcome to NMTrack!"
+            android:textSize="36sp"
+            android:textStyle="bold"
+            android:background="#FFFFFF"
+            android:textColor="#006800"/>
 
         <!-- 今日支出 -->
         <TextView
             android:id="@+id/tvTodayExpense"
             android:layout_width="match_parent"
             android:layout_height="100dp"
-            android:layout_marginBottom="10dp"
-            android:layout_weight="1"
+            android:layout_marginTop="24dp"
             android:background="#FFFFFF"
             android:gravity="center"
             android:text=""
-            android:textSize="26sp" /> <!-- Set the background color to green -->
+            android:textSize="26sp"
+            android:textColor="#006800"/>
 
 
         <TextView
             android:id="@+id/tvBalance"
             android:layout_width="match_parent"
             android:layout_height="80dp"
-            android:layout_marginBottom="10dp"
-            android:layout_weight="1"
+            android:layout_marginVertical="24dp"
             android:background="#FFFFFF"
             android:gravity="center"
-            android:textSize="22sp" /> <!-- Set the background color to green -->
-
-
-        <TextView
-            android:id="@+id/tvWeekly"
-            android:layout_width="match_parent"
-            android:layout_height="80dp"
-            android:layout_weight="1"
-            android:gravity="center"
-            android:text="Welcome to NMTrack!"
-            android:textSize="36sp"
-            android:textStyle="bold"
-            android:background="#FFFFFF" />
+            android:textSize="26sp"
+            android:textColor="#006800"/>
 
     </LinearLayout>
 
-    <!-- Add green-colored view as a separator -->
-    <View
-        android:id="@+id/greenSeparator"
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="2dp"
-        android:background="#3CB371"
-        app:layout_constraintTop_toBottomOf="@id/top_info_layout" />
+        android:layout_height="0dp"
+        android:orientation="vertical">
 
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/rvDayBill"
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/rvDayBill"
+            android:layout_width="match_parent"
+            android:layout_height="400dp"
+            tools:listitem="@layout/item_bill"
+            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"/>
+    </LinearLayout>
+
+    <Button
+        android:id="@+id/m_to_bi"
         android:layout_width="match_parent"
-        android:layout_height="400dp"
-        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/greenSeparator"
-        app:layout_constraintVertical_bias="0.34"
-        tools:layout_editor_absoluteX="16dp"
-        tools:listitem="@layout/item_bill"
-        android:background="#FFFFFF" />
+        android:layout_height="wrap_content"
+        android:layout_marginTop="50dp"
+        android:layout_marginHorizontal="40dp"
+        android:layout_gravity="center"
+        android:text="Add new bill here"
+        android:backgroundTint="#3CB371"
+        android:textSize="20sp"
+        app:cornerRadius="10dp"/>
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+</LinearLayout>
