--- a/app/src/main/res/layout/activity_main_page_fragment.xml
+++ b/app/src/main/res/layout/activity_main_page_fragment.xml
@@ -49,12 +49,12 @@
         <TextView
             android:id="@+id/tvBalance"
             android:layout_width="match_parent"
-            android:layout_height="80dp"
+            android:layout_height="110dp"
             android:layout_marginVertical="24dp"
             android:background="#FFFFFF"
             android:gravity="center"
-            android:textSize="26sp"
-            android:textColor="#006800"/>
+            android:textColor="#006800"
+            android:textSize="26sp" />
 
     </LinearLayout>
 
